--- a/pom.xml
+++ b/pom.xml
@@ -167,10 +167,25 @@
 					<plugin>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<goals>
+									<goal>repackage</goal>
+								</goals>
+							</execution>
+						</executions>
 						<configuration>
-							<profiles>
-								<profile>alzza</profile>
-							</profiles>
+							<excludes>
+								<exclude>
+									<groupId>org.projectlombok</groupId>
+									<artifactId>lombok</artifactId>
+								</exclude>
+							</excludes>
+							<finalName>camperxoffice</finalName>
+							<image>
+								<name>ascdee1234/camperx-api:${project.version}</name>
+							</image>
+							<executable>true</executable>
 						</configuration>
 					</plugin>
 				</plugins>
