--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,29 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<!-- Spring Boot 패키징 플러그인 -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<!-- JAR 실행 가능하도록 설정 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.camperxoffice.CamperXofficeApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
+
 
 	<profiles>
 		<profile>
